.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Sync__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>hold current sync state</description>
    <fields>
        <fullName>Flosum__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Expired__c</fullName>
        <label>Expired</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__JobId__c</fullName>
        <label>JobId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Sync_JobId__c</fullName>
        <label>Sync JobId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__System_Name__c</fullName>
        <label>System_Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__TaskId__c</fullName>
        <label>TaskId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sync</label>
</CustomObject>